<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timer.TimerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/numbersLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/controlButtonsLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/minutes10Layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/minutes10PlusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/plus10MinutesButtonHint"
                            android:text="@string/plus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/minutes10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="100sp"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck"
                            tools:text="0" />

                        <Button
                            android:id="@+id/minutes10MinusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/minus10MinutesButtonHint"
                            android:text="@string/minus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/minutes1Layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/minutes1PlusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/plus1MinutesButtonHint"
                            android:text="@string/plus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/minutes1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="100sp"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck"
                            tools:text="0" />

                        <Button
                            android:id="@+id/minutes1MinusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/minus1MinutesButtonHint"
                            android:text="@string/minus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/colLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/colon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@string/colon"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="100sp"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/seconds10Layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/seconds10PlusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/plus10SecondsButtonHint"
                            android:text="@string/plus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/seconds10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="100sp"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck"
                            tools:text="0" />

                        <Button
                            android:id="@+id/seconds10MinusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/minus10SecondsButtonHint"
                            android:text="@string/minus_sign"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/seconds1Layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/seconds1PlusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/plus1SecondsButtonHint"
                            android:text="@string/plus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/seconds1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="100sp"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck"
                            tools:text="0" />

                        <Button
                            android:id="@+id/seconds1MinusButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/minus1SecondsButtonHint"
                            android:text="@string/minus_sign"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/controlButtonsLayout"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintWidth_max="600dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/startButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="1"
                        android:singleLine="false"
                        android:text="@string/start_button"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="22sp"
                        tools:ignore="ButtonStyle"
                        tools:text="Start" />

                    <Button
                        android:id="@+id/pauseButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="2"
                        android:ellipsize="none"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/pause_button"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="22sp"
                        tools:ignore="ButtonStyle"
                        tools:text="Pause" />

                    <Button
                        android:id="@+id/stopButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="1"
                        android:singleLine="false"
                        android:text="@string/stop_button"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="22sp"
                        tools:ignore="ButtonStyle"
                        tools:text="Stop" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>